Bug 1443511 - Apply HTMLMediaElement volume to currently playing audio segments. r=pehrsons

Rather than applying the volume change to the DecodedStream, which won't be
played until the buffer catches up, instead apply the volume to the segments
as they are consumed by the MediaTrackGraph.

Differential Revision: https://phabricator.services.mozilla.com/D56276