dom/media/MediaTrackGraph.h
@@ -682,6 +682,11 @@ class SourceMediaTrack : public MediaTrack {
 
   void RemoveAllDirectListenersImpl() override;
 
+  // The value set here is applied in MoveToSegment so we can avoid the
+  // buffering delay in applying the change. See Bug 1443511.
+  void SetVolume(float aVolume);
+  float GetVolumeLocked();
+
   friend class MediaTrackGraphImpl;
 
  protected:
@@ -737,6 +742,7 @@ class SourceMediaTrack : public MediaTrack {
   // held together.
   Mutex mMutex;
   // protected by mMutex
+  float mVolume = 1.0;
   UniquePtr<TrackData> mUpdateTrack;
   nsTArray<RefPtr<DirectMediaTrackListener>> mDirectTrackListeners;
 };
